anthos/namespaces/istio-system/http-allowed-serviceentry.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: http-allowed-egress
  namespace: istio-system
spec:
  hosts:
  # for stata/ssc
  - "fmwww.bc.edu"
  - "bioconductor.org"
  location: MESH_EXTERNAL
  ports:
  - name: http
    number: 80
    protocol: HTTP
  resolution: NONE
